2025-05-14T12:42:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15020974111 # 976
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-14
* notice: last 14d: unq all: 27 81
* notice: prev accum: outdated-unq outdated-all / unq all: 4157 8832 / 4205 8915
* notice: next accum: outdated-unq outdated-all / unq all: 4157 8832 / 4206 8916
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-30 2025-05-14]

2025-05-14T01:45:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15010414909 # 975
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-14
* notice: last 14d: unq all: 28 82
* notice: prev accum: outdated-unq outdated-all / unq all: 4152 8824 / 4204 8902
* notice: next accum: outdated-unq outdated-all / unq all: 4157 8832 / 4205 8915
* notice: prev exec diff / last date diff / accum: unq all: +1 +13 -0 -1 / +10 +26 -0 -0 / 10 26
* notice: removed / changed dates: [2025-04-29] / [2025-04-30 2025-05-13]

2025-05-13T12:44:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14996940486 # 974
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-13
* notice: last 14d: unq all: 29 76
* notice: prev accum: outdated-unq outdated-all / unq all: 4152 8824 / 4195 8889
* notice: next accum: outdated-unq outdated-all / unq all: 4152 8824 / 4204 8902
* notice: prev exec diff / last date diff / accum: unq all: +9 +13 -1 -1 / +9 +13 -0 -0 / 9 13
* notice: removed / changed dates: [] / [2025-04-29 2025-05-13]

2025-05-13T01:46:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14986351057 # 973