@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-05-02T01:44:01Z",
-  "count" : 2,
+  "timestamp" : "2025-05-15T01:43:45Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
