@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-05-14T12:42:32Z",
-  "count_outdated" : 8832,
-  "uniques_outdated" : 4157,
-  "count" : 8916,
-  "uniques" : 4206,
+  "timestamp" : "2025-05-15T01:43:45Z",
+  "count_outdated" : 8839,
+  "uniques_outdated" : 4162,
+  "count" : 8922,
+  "uniques" : 4210,
   "clones" : [
     {
-      "timestamp": "2025-04-30T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 2, 7 ],
-      "count_decinc": [ 3, 7 ],
-      "uniques": 3,
-      "uniques_minmax": [ 2, 5 ],
-      "uniques_decinc": [ 2, 5 ]
-    },
-    {
       "timestamp": "2025-05-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2025-05-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 7,
+      "count_minmax": [ 1, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 5,
+      "uniques_minmax": [ 1, 5 ],
+      "uniques_decinc": [ 0, 5 ]
     }
   ]
 }
