@@ -1,15 +1,10 @@
 {
-  "count": 81,
-  "uniques": 27,
+  "count": 82,
+  "uniques": 28,
   "clones": [
     {
-      "timestamp": "2025-04-30T00:00:00Z",
-      "count": 4,
-      "uniques": 3
-    },
-    {
       "timestamp": "2025-05-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2025-05-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 7,
+      "uniques": 5
     }
   ]
 }
