@@ -1,3 +1,12 @@
+2025-05-15T01:43:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15034754326 # 977
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-15
+* notice: last 14d: unq all: 28 82
+* notice: prev accum: outdated-unq outdated-all / unq all: 4157 8832 / 4206 8916
+* notice: next accum: outdated-unq outdated-all / unq all: 4162 8839 / 4210 8922
+* notice: prev exec diff / last date diff / accum: unq all: +4 +6 -0 -1 / +5 +7 -0 -0 / 5 7
+* notice: removed / changed dates: [2025-04-30] / [2025-05-01 2025-05-14]
+
 2025-05-14T12:42:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15020974111 # 976
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-14
